plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
}

group 'net.covers1624'
archivesBaseName = "FastRemapper"
version '0.2.4'

version = "$version." + (System.getenv("BUILD_NUMBER") ?: "1")
println "Starting build of ${archivesBaseName}, Version: ${version}"

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://maven.minecraftforge.net/" }
}

dependencies {
    api 'net.covers1624:Quack:0.4.6.68'

    api 'net.sf.jopt-simple:jopt-simple:5.0.4'
    api 'org.ow2.asm:asm:9.2'
    api('org.ow2.asm:asm-commons:9.2') {
        exclude module: 'asm-tree'
    }

    api 'net.minecraftforge:srgutils:0.4.3'

    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
    compileOnly 'org.jetbrains:annotations:22.0.0'
}

jar {
    manifest {
        attributes 'Main-Class': 'net.covers1624.fastremap.FastRemapper'
        attributes 'Multi-Release': 'true'
    }
    from file("LICENSE.txt")
}

publishing {
    repositories {
        if (System.getenv('MAVEN_PASS')) {
            maven {
                url "https://nexus.covers1624.net/repository/maven-releases/"
                credentials {
                    username 'covers1624'
                    password System.getenv('MAVEN_PASS')
                }
            }
        }
    }
    publications {
        FastRemapper(MavenPublication) {
            groupId project.group
            artifactId project.archivesBaseName
            version project.version
            from components["java"]

            pom {
                name = archivesBaseName
                description = archivesBaseName
                //The publish plugin doesnt like GString's here apparently..
                url = "https://github.com/covers1624/${archivesBaseName}".toString()
                scm {
                    url = "https://github.com/covers1624/${archivesBaseName}".toString()
                    connection = "scm:git:git://github.com/covers1624/${archivesBaseName}.git".toString()
                    connection = "scm:git:git@github.com:covers1624/${archivesBaseName}.git".toString()
                }

                issueManagement {
                    system = 'github'
                    url = "https://github.com/covers1624/${archivesBaseName}/issues".toString()
                }
                licenses {
                    license {
                        name = "MIT"
                        url = "https://raw.githubusercontent.com/covers1624/${archivesBaseName}/master/LICENSE.txt".toString()
                        distribution = 'repo'
                    }
                }
                developers {
                    developer {
                        id = 'covers1624'
                        name = 'covers1624'
                    }
                }
            }
        }
    }
}
